data/collection/fixes/descriptions/scala/scala-10301
``` scala
Welcome to Scala 2.12.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_102).
Type in expressions for evaluation. Or try :help.

scala> import scala.collection.immutable.Queue
import scala.collection.immutable.Queue

scala> Queue.empty.enqueue(0).euqueue(1)
<console>:13: error: value euqueue is not a member of scala.collection.immutable.Queue[Int]
       Queue.empty.enqueue(0).euqueue(1)
                              ^
```

The error message is wrong.

I'm pretty sure `euqueue` is a member of `Queue`.